--- a/app/src/main/res/layout/tab1_pending_tasks.xml
+++ b/app/src/main/res/layout/tab1_pending_tasks.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:clipToPadding="false"
+    android:overScrollMode="never"
     tools:context=".ProcessActivity">
 
     <TextView
