--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -1,44 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/task_list_item_horizontal_height"
-    android:layout_marginHorizontal="@dimen/task_list_item_horizontal_margin">
+    android:layout_margin="@dimen/task_list_item_margin"
+    android:clickable="true"
+    android:focusable="true">
 
-    <!--This TextView holds the task data for one particular task in the list-->
-    <TextView
-        android:id="@+id/tv_rv_task_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"/>
-
-    <!--This View serves as a visual divider between list items-->
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#dadada" />
+        android:layout_height="match_parent">
+        <!--This TextView holds the task data for one particular task in the list-->
+        <TextView
+            android:id="@+id/tv_rv_task_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="8dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="TaskName"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryText"/>
 
-    <TextView
-        android:id="@+id/tv_rv_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:text="TextView" />
+        <!--This View serves as a visual divider between list items-->
+        <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--android:background="#dadada" />-->
 
-    <TextView
-        android:id="@+id/tv_rv_percentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
-        android:text="TextView"
-        android:visibility="visible" />
+        <TextView
+            android:id="@+id/tv_rv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:text="TextView" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tv_rv_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            android:text="TextView"
+            android:visibility="visible" />
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
