--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
 
-    <dimen name="task_list_item_horizontal_margin">16dp</dimen>
-    <dimen name="task_list_item_horizontal_height">50dp</dimen>
+    <dimen name="task_list_item_margin">4dp</dimen>
+    <dimen name="task_list_item_horizontal_height">70dp</dimen>
+
 </resources>
