Beta version of application    -Uploads in asynstasks    -Notification service    -Delayed upload

--- a/app/src/main/res/layout/activity_taskmanager.xml
+++ b/app/src/main/res/layout/activity_taskmanager.xml
@@ -34,18 +34,18 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_text_1" />
+                android:text="@string/pending_task_tab_title" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_text_2" />
+                android:text="@string/progress_task_tab_title" />
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <com.example.marcell.taskmanager.Utils.CustomViewPager
+    <com.example.marcell.taskmanager.UI.TaskManagerTabs.TabUtilities.CustomViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
