--- a/app/src/main/res/layout/activity_add_edit_task.xml
+++ b/app/src/main/res/layout/activity_add_edit_task.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -7,10 +8,10 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="10dp">
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -21,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/addedittask_title"
+                android:text="@string/edit_task_title"
                 android:textSize="20sp" />
 
         </FrameLayout>
@@ -34,11 +35,11 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/ed_addnewtask_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/addedittask_name"
+                android:hint="@string/edit_task_name"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
@@ -49,54 +50,63 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/ed_addnewtask_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/addedittask_description"
+                android:hint="@string/edit_task_description"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
 
-        <RelativeLayout
+        <!--File import-->
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="left"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp">
 
-            <!--File import-->
-
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_gravity="left"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp">
+                android:orientation="horizontal"
+                android:weightSum="10">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/ed_addnewtask_file"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/addedittask_filepath"
-                    android:inputType="textUri" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:hint="@string/edit_task_filepath"
+                    android:inputType="textUri"
+                    android:layout_weight="8" />
 
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true">
 
                 <Button
                     android:id="@+id/bt_addedittask_browse"
                     style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:text="@string/addedittask_browse_button"
+                    android:layout_alignParentRight="true"
+                    android:singleLine="true"
+                    android:layout_weight="2"
+                    android:text="@string/edit_task_browse_button"
                     android:typeface="normal" />
-            </FrameLayout>
+            </LinearLayout>
 
-        </RelativeLayout>
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_keyword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="15dp"
+            android:visibility="visible"
+            tools:listitem="@layout/keyword_list_item" />
 
 
     </LinearLayout>
