--- a/app/src/main/res/layout/tab2_progress_tasks.xml
+++ b/app/src/main/res/layout/tab2_progress_tasks.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ProcessActivity">
+    tools:context=".UI.TaskManagerActivity">
 
     <TextView
         android:id="@+id/tv_section_label"
@@ -21,10 +21,12 @@
         app:layout_constraintTop_toTopOf="@+id/constraintLayout"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_task_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        tools:listitem="@layout/task_list_item" />
 
 </LinearLayout>
