--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -2,55 +2,80 @@
 
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/task_list_item_horizontal_height"
     android:layout_margin="@dimen/task_list_item_margin"
     android:clickable="true"
     android:focusable="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="100">
         <!--This TextView holds the task data for one particular task in the list-->
-        <TextView
-            android:id="@+id/tv_rv_task_name"
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="TaskName"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryText"/>
+            android:layout_height="match_parent"
+            android:layout_weight="40">
 
-        <!--This View serves as a visual divider between list items-->
-        <!--<View-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="1dp"-->
-            <!--android:layout_marginLeft="8dp"-->
-            <!--android:layout_marginRight="8dp"-->
-            <!--android:background="#dadada" />-->
+            <TextView
+                android:id="@+id/tv_rv_task_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
 
-        <TextView
-            android:id="@+id/tv_rv_status"
+                android:text="Name"
+                android:textColor="@color/primary_text"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="8dp"
-            android:text="TextView" />
+            android:layout_height="match_parent"
+            android:layout_weight="30">
 
-        <TextView
-            android:id="@+id/tv_rv_percentage"
+            <TextView
+                android:id="@+id/tv_rv_completion_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="TextView"
+                tools:text="00:00:00" />
+        </FrameLayout>
+
+
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="80dp"
-            android:layout_marginRight="80dp"
-            android:text="TextView"
-            android:visibility="visible" />
-    </RelativeLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="10">
+
+            <TextView
+                android:id="@+id/tv_rv_percentage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="53%" />
+
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="20">
+
+            <TextView
+                android:id="@+id/tv_rv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="TextView"
+                tools:text="Completed" />
+        </FrameLayout>
+
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
