--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,8 @@
 
     <dimen name="task_list_item_margin">4dp</dimen>
     <dimen name="task_list_item_horizontal_height">70dp</dimen>
+    <dimen name="keyword_item_height">30dp</dimen>
+    <dimen name="keyword_item_padding">5dp</dimen>
+    <dimen name="keyword_add_button_radius">25dp</dimen>
 
 </resources>
