-Tuned colors to protonmail like -Tuned view

--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -18,13 +18,14 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="40">
+            android:layout_weight="50">
 
             <TextView
                 android:id="@+id/tv_rv_task_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="8dp"
 
                 android:text="Name"
                 android:textColor="@color/primary_text"
@@ -34,7 +35,7 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="30">
+            android:layout_weight="20">
 
             <TextView
                 android:id="@+id/tv_rv_completion_time"
