--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#4CAF50</color>
-    <color name="primary_dark">#388E3C</color>
-    <color name="accent">#CDDC39</color>
+    <color name="primary">#505061</color>
+    <color name="primary_dark">#505061</color>
+    <color name="accent">#505061</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
 </resources>
